--- a/tex/cyclone.tex
+++ b/tex/cyclone.tex
@@ -86,7 +86,7 @@ When $n = 27$, the compositions $f$ tend to be unique. So the key constantly wan
 
 DISCLAIMER
 
-I'm not a professional cryptographer. I just took some independent studies and grad school. This is one of a few ideas that occurred to me at that time. If an actual cryptographer has an opinion about the security of this system, I'd be glad to hear it. To me it \i{seems} reasonably strong for $n = 27$, but I can't be sure. 
+I'm not a professional cryptographer. I just took some independent studies while in grad school. This is one of a few ideas that occurred to me at that time. If an actual cryptographer has an opinion about the security of this system, I'd be glad to hear it. To me it \i{seems} reasonably strong for $n = 27$, but I can't be sure. 
 
 }}
 \end{document}
